--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<html>
-    <head>
-        <title>
-            Student Teats
-        </title>
-    </head>
-    <body>
-        <h1>Hi Mom!</h1>
-        <h5>
-            Money. Hoes. ONS. It's more than a linear path. It's a prism of endless pleasure, where a single choice can branch out into infinite baby mamas. Follow me, and ponder the question...What if?
-        </h5>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + Vue + TS</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
